Update testing docs
Signed-off-by: lanfon72 <lanfon72@users.noreply.github.com>

--- a/backend/integrations/index.html
+++ b/backend/integrations/index.html
@@ -52,6 +52,10 @@ el.replaceWith(d);
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.integrations.test_2_security_images" href="test_2_security_images.html">harvester_e2e_tests.integrations.test_2_security_images</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.integrations.test_3_vm" href="test_3_vm.html">harvester_e2e_tests.integrations.test_3_vm</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -128,6 +132,7 @@ el.replaceWith(d);
 <li><code><a title="harvester_e2e_tests.integrations.test_0_storage_network" href="test_0_storage_network.html">harvester_e2e_tests.integrations.test_0_storage_network</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_1_images" href="test_1_images.html">harvester_e2e_tests.integrations.test_1_images</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_1_volumes" href="test_1_volumes.html">harvester_e2e_tests.integrations.test_1_volumes</a></code></li>
+<li><code><a title="harvester_e2e_tests.integrations.test_2_security_images" href="test_2_security_images.html">harvester_e2e_tests.integrations.test_2_security_images</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_3_vm" href="test_3_vm.html">harvester_e2e_tests.integrations.test_3_vm</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_3_vm_functions" href="test_3_vm_functions.html">harvester_e2e_tests.integrations.test_3_vm_functions</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_4_vm_backup_restore" href="test_4_vm_backup_restore.html">harvester_e2e_tests.integrations.test_4_vm_backup_restore</a></code></li>
