--- a/backend/integrations/test_3_vm.html
+++ b/backend/integrations/test_3_vm.html
@@ -86,7 +86,7 @@ def available_node_names(api_client):
 </summary>
 <pre><code class="python">@pytest.fixture(scope=&#34;class&#34;)
 def cluster_network(api_client, vlan_nic):
-    name = f&#34;cnet-{vlan_nic}&#34;
+    name = f&#34;cnet-{vlan_nic.lower()}&#34;[:12]  # ???: RFC1123 and length limits
     code, data = api_client.clusternetworks.create(name)
     assert 201 == code, (code, data)
     code, data = api_client.clusternetworks.create_config(name, name, vlan_nic)
