Update testing docs
Signed-off-by: lanfon72 <lanfon72@users.noreply.github.com>

--- a/backend/fixtures/api_client.html
+++ b/backend/fixtures/api_client.html
@@ -63,6 +63,7 @@ def api_client(request, harvester_metadata):
     api.authenticate(username, password, verify=ssl_verify)
 
     api.session.verify = ssl_verify
+    api.load_managers(api.cluster_version)
 
     harvester_metadata[&#39;Cluster Endpoint&#39;] = endpoint
     harvester_metadata[&#39;Cluster Version&#39;] = api.cluster_version.raw
