Update testing docs
Signed-off-by: lanfon72 <lanfon72@users.noreply.github.com>

--- a/backend/integrations/index.html
+++ b/backend/integrations/index.html
@@ -72,6 +72,10 @@ el.replaceWith(d);
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.integrations.test_4_vm_overcommit" href="test_4_vm_overcommit.html">harvester_e2e_tests.integrations.test_4_vm_overcommit</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.integrations.test_4_vm_snapshot" href="test_4_vm_snapshot.html">harvester_e2e_tests.integrations.test_4_vm_snapshot</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -137,6 +141,7 @@ el.replaceWith(d);
 <li><code><a title="harvester_e2e_tests.integrations.test_3_vm_functions" href="test_3_vm_functions.html">harvester_e2e_tests.integrations.test_3_vm_functions</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_4_vm_backup_restore" href="test_4_vm_backup_restore.html">harvester_e2e_tests.integrations.test_4_vm_backup_restore</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_4_vm_host_powercycle" href="test_4_vm_host_powercycle.html">harvester_e2e_tests.integrations.test_4_vm_host_powercycle</a></code></li>
+<li><code><a title="harvester_e2e_tests.integrations.test_4_vm_overcommit" href="test_4_vm_overcommit.html">harvester_e2e_tests.integrations.test_4_vm_overcommit</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_4_vm_snapshot" href="test_4_vm_snapshot.html">harvester_e2e_tests.integrations.test_4_vm_snapshot</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_4_vm_template" href="test_4_vm_template.html">harvester_e2e_tests.integrations.test_4_vm_template</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_5_vm_networks" href="test_5_vm_networks.html">harvester_e2e_tests.integrations.test_5_vm_networks</a></code></li>
