Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/backend/integrations/index.html
+++ b/backend/integrations/index.html
@@ -68,6 +68,10 @@ el.replaceWith(d);
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.integrations.test_4_vm_host_cpu_pinning" href="test_4_vm_host_cpu_pinning.html">harvester_e2e_tests.integrations.test_4_vm_host_cpu_pinning</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.integrations.test_4_vm_host_powercycle" href="test_4_vm_host_powercycle.html">harvester_e2e_tests.integrations.test_4_vm_host_powercycle</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -140,6 +144,7 @@ el.replaceWith(d);
 <li><code><a title="harvester_e2e_tests.integrations.test_3_vm" href="test_3_vm.html">harvester_e2e_tests.integrations.test_3_vm</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_3_vm_functions" href="test_3_vm_functions.html">harvester_e2e_tests.integrations.test_3_vm_functions</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_4_vm_backup_restore" href="test_4_vm_backup_restore.html">harvester_e2e_tests.integrations.test_4_vm_backup_restore</a></code></li>
+<li><code><a title="harvester_e2e_tests.integrations.test_4_vm_host_cpu_pinning" href="test_4_vm_host_cpu_pinning.html">harvester_e2e_tests.integrations.test_4_vm_host_cpu_pinning</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_4_vm_host_powercycle" href="test_4_vm_host_powercycle.html">harvester_e2e_tests.integrations.test_4_vm_host_powercycle</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_4_vm_overcommit" href="test_4_vm_overcommit.html">harvester_e2e_tests.integrations.test_4_vm_overcommit</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_4_vm_snapshot" href="test_4_vm_snapshot.html">harvester_e2e_tests.integrations.test_4_vm_snapshot</a></code></li>
