Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/backend/conftest.html
+++ b/backend/conftest.html
@@ -470,6 +470,7 @@ def pytest_collection_modifyitems(session, config, items):
         (&#39;delete_host&#39;, (&#39;{_r} host and will delete one of hosts&#39;)),
         (&#34;negative&#34;, (&#34;{_r} a negative tests&#34;)),
         (&#39;keypairs&#39;, (&#34;{_r} SSH keypairs tests&#34;)),
+        (&#39;namespaces&#39;, (&#34;{_r} namespaces tests&#34;)),
         (&#39;images&#39;, (&#34;{_r} image tests&#34;)),
         (&#34;networks&#34;, (&#34;{_r} vlan network tests&#34;)),
         (&#34;volumes&#34;, (&#34;{_r} volume tests&#34;)),
