--- a/backend/apis/index.html
+++ b/backend/apis/index.html
@@ -56,6 +56,10 @@ el.replaceWith(d);
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.apis.test_namespaces" href="test_namespaces.html">harvester_e2e_tests.apis.test_namespaces</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.apis.test_networks" href="test_networks.html">harvester_e2e_tests.apis.test_networks</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -105,6 +109,7 @@ el.replaceWith(d);
 <li><code><a title="harvester_e2e_tests.apis.test_hosts" href="test_hosts.html">harvester_e2e_tests.apis.test_hosts</a></code></li>
 <li><code><a title="harvester_e2e_tests.apis.test_images" href="test_images.html">harvester_e2e_tests.apis.test_images</a></code></li>
 <li><code><a title="harvester_e2e_tests.apis.test_keypairs" href="test_keypairs.html">harvester_e2e_tests.apis.test_keypairs</a></code></li>
+<li><code><a title="harvester_e2e_tests.apis.test_namespaces" href="test_namespaces.html">harvester_e2e_tests.apis.test_namespaces</a></code></li>
 <li><code><a title="harvester_e2e_tests.apis.test_networks" href="test_networks.html">harvester_e2e_tests.apis.test_networks</a></code></li>
 <li><code><a title="harvester_e2e_tests.apis.test_settings" href="test_settings.html">harvester_e2e_tests.apis.test_settings</a></code></li>
 <li><code><a title="harvester_e2e_tests.apis.test_support_bundle" href="test_support_bundle.html">harvester_e2e_tests.apis.test_support_bundle</a></code></li>
