Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/backend/integrations/index.html
+++ b/backend/integrations/index.html
@@ -96,6 +96,10 @@ el.replaceWith(d);
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.integrations.test_9_addons" href="test_9_addons.html">harvester_e2e_tests.integrations.test_9_addons</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.integrations.test_9_rancher_integration" href="test_9_rancher_integration.html">harvester_e2e_tests.integrations.test_9_rancher_integration</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -151,6 +155,7 @@ el.replaceWith(d);
 <li><code><a title="harvester_e2e_tests.integrations.test_4_vm_template" href="test_4_vm_template.html">harvester_e2e_tests.integrations.test_4_vm_template</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_5_vm_networks" href="test_5_vm_networks.html">harvester_e2e_tests.integrations.test_5_vm_networks</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_5_vm_networks_interact" href="test_5_vm_networks_interact.html">harvester_e2e_tests.integrations.test_5_vm_networks_interact</a></code></li>
+<li><code><a title="harvester_e2e_tests.integrations.test_9_addons" href="test_9_addons.html">harvester_e2e_tests.integrations.test_9_addons</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_9_rancher_integration" href="test_9_rancher_integration.html">harvester_e2e_tests.integrations.test_9_rancher_integration</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_upgrade" href="test_upgrade.html">harvester_e2e_tests.integrations.test_upgrade</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_z_terraform" href="test_z_terraform.html">harvester_e2e_tests.integrations.test_z_terraform</a></code></li>
