--- a/backend/conftest.html
+++ b/backend/conftest.html
@@ -477,6 +477,7 @@ def pytest_collection_modifyitems(session, config, items):
         (&#34;virtualmachines&#34;, (&#34;{_r} VM tests&#34;)),
         (&#34;templates&#34;, (&#34;{_r} VM template tests&#34;)),
         (&#34;support_bundle&#34;, (&#34;{_r} Support Bundle tests&#34;)),
+        (&#34;addons&#34;, (&#34;{_r} addon tests&#34;)),
         (&#34;settings&#34;, (&#34;{_r} settings tests&#34;)),
         (&#34;upgrade&#34;, (&#34;{_r} upgrade tests&#34;)),
         (&#34;any_nodes&#34;, (&#34;{_r} tests which could be ran on clushter with any nodes&#34;)),
@@ -490,7 +491,8 @@ def pytest_collection_modifyitems(session, config, items):
         (&#39;backup_target&#39;, (&#39;{_r} backup-target tests&#39;)),
         (&#39;S3&#39;, (&#39;{_r} backup-target tests with S3&#39;)),
         (&#39;NFS&#39;, (&#39;{_r} backup-target tests with NFS&#39;)),
-        (&#39;performance&#39;, (&#39;{_r} tests related to performance in any module&#39;))
+        (&#39;performance&#39;, (&#39;{_r} tests related to performance in any module&#39;)),
+        (&#39;experimental&#39;, (&#39;{_r} tests for experimental features&#39;))
     ]
 
     for m, msg in markers:
