--- a/backend/integrations/test_9_addons.html
+++ b/backend/integrations/test_9_addons.html
@@ -241,7 +241,6 @@ class TestVMDHCPControllerAddon:
 
         server_ip_parts = ippool_start.split(&#39;.&#39;)
         server_ip_parts[3] = str(max(1, int(server_ip_parts[3]) - 1))
-        server_ip = &#39;.&#39;.join(server_ip_parts)
 
         # Gateway/router is typically the first IP in the subnet
         gateway_parts = ippool_subnet.split(&#39;/&#39;)[0].split(&#39;.&#39;)
@@ -251,23 +250,19 @@ class TestVMDHCPControllerAddon:
         try:
             # Create DHCP IPPool using kubectl
             # (API doesn&#39;t support network.harvesterhci.io IPPools)
-            ippool_yaml = f&#34;&#34;&#34;apiVersion: network.harvesterhci.io/v1alpha1
+            ippool_yaml = f&#34;&#34;&#34;apiVersion: loadbalancer.harvesterhci.io/v1beta1
 kind: IPPool
 metadata:
   name: {ippool_name}
   namespace: default
 spec:
-  ipv4Config:
-    serverIP: {server_ip}
-    cidr: {ippool_subnet}
-    pool:
-      start: {ippool_start}
-      end: {ippool_end}
-    router: {gateway_ip}
-    dns:
-      - 8.8.8.8
-    leaseTime: 300
-  networkName: {network_id}
+  ranges:
+    - gateway: {gateway_ip}
+      rangeEnd: {ippool_end}
+      rangeStart: {ippool_start}
+      subnet: {ippool_subnet}
+  selector:
+    network: {network_id}
 &#34;&#34;&#34;
 
             manifest_file = None
@@ -302,7 +297,7 @@ spec:
             endtime = datetime.now() + timedelta(seconds=wait_timeout)
             while endtime &gt; datetime.now():
                 result = subprocess.run(
-                    [&#39;kubectl&#39;, &#39;get&#39;, &#39;ippools.network&#39;,
+                    [&#39;kubectl&#39;, &#39;get&#39;, &#39;ippools.loadbalancer&#39;,
                      ippool_name, &#39;-o&#39;, &#39;json&#39;],
                     stdout=subprocess.PIPE,
                     stderr=subprocess.PIPE,
@@ -316,25 +311,13 @@ spec:
                         &#39;status&#39;, {}
                     ).get(&#39;conditions&#39;, [])
 
-                    # Check for Registered, CacheReady, and AgentReady
-                    # conditions
+                    # Check for Registered conditions
                     registered = any(
-                        c.get(&#39;type&#39;) == &#39;Registered&#39; and
+                        c.get(&#39;type&#39;) == &#39;Ready&#39; and
                         c.get(&#39;status&#39;) == &#39;True&#39;
                         for c in conditions
                     )
-                    cache_ready = any(
-                        c.get(&#39;type&#39;) == &#39;CacheReady&#39; and
-                        c.get(&#39;status&#39;) == &#39;True&#39;
-                        for c in conditions
-                    )
-                    agent_ready = any(
-                        c.get(&#39;type&#39;) == &#39;AgentReady&#39; and
-                        c.get(&#39;status&#39;) == &#39;True&#39;
-                        for c in conditions
-                    )
-
-                    if registered and cache_ready and agent_ready:
+                    if registered:
                         ippool_status.get(
                             &#39;status&#39;, {}
                         ).get(&#39;ipv4&#39;, {}).get(&#39;available&#39;, 0)
@@ -492,7 +475,7 @@ spec:
             # Delete DHCP IP pool using kubectl
             try:
                 result = subprocess.run(
-                    [&#39;kubectl&#39;, &#39;delete&#39;, &#39;ippools.network&#39;, ippool_name],
+                    [&#39;kubectl&#39;, &#39;delete&#39;, &#39;ippools.loadbalancer&#39;, ippool_name],
                     stdout=subprocess.PIPE,
                     stderr=subprocess.PIPE,
                     universal_newlines=True,
@@ -829,7 +812,6 @@ def test_enable_vm_dhcp_addon(self, api_client, wait_timeout):
 
         server_ip_parts = ippool_start.split(&#39;.&#39;)
         server_ip_parts[3] = str(max(1, int(server_ip_parts[3]) - 1))
-        server_ip = &#39;.&#39;.join(server_ip_parts)
 
         # Gateway/router is typically the first IP in the subnet
         gateway_parts = ippool_subnet.split(&#39;/&#39;)[0].split(&#39;.&#39;)
@@ -839,23 +821,19 @@ def test_enable_vm_dhcp_addon(self, api_client, wait_timeout):
         try:
             # Create DHCP IPPool using kubectl
             # (API doesn&#39;t support network.harvesterhci.io IPPools)
-            ippool_yaml = f&#34;&#34;&#34;apiVersion: network.harvesterhci.io/v1alpha1
+            ippool_yaml = f&#34;&#34;&#34;apiVersion: loadbalancer.harvesterhci.io/v1beta1
 kind: IPPool
 metadata:
   name: {ippool_name}
   namespace: default
 spec:
-  ipv4Config:
-    serverIP: {server_ip}
-    cidr: {ippool_subnet}
-    pool:
-      start: {ippool_start}
-      end: {ippool_end}
-    router: {gateway_ip}
-    dns:
-      - 8.8.8.8
-    leaseTime: 300
-  networkName: {network_id}
+  ranges:
+    - gateway: {gateway_ip}
+      rangeEnd: {ippool_end}
+      rangeStart: {ippool_start}
+      subnet: {ippool_subnet}
+  selector:
+    network: {network_id}
 &#34;&#34;&#34;
 
             manifest_file = None
@@ -890,7 +868,7 @@ spec:
             endtime = datetime.now() + timedelta(seconds=wait_timeout)
             while endtime &gt; datetime.now():
                 result = subprocess.run(
-                    [&#39;kubectl&#39;, &#39;get&#39;, &#39;ippools.network&#39;,
+                    [&#39;kubectl&#39;, &#39;get&#39;, &#39;ippools.loadbalancer&#39;,
                      ippool_name, &#39;-o&#39;, &#39;json&#39;],
                     stdout=subprocess.PIPE,
                     stderr=subprocess.PIPE,
@@ -904,25 +882,13 @@ spec:
                         &#39;status&#39;, {}
                     ).get(&#39;conditions&#39;, [])
 
-                    # Check for Registered, CacheReady, and AgentReady
-                    # conditions
+                    # Check for Registered conditions
                     registered = any(
-                        c.get(&#39;type&#39;) == &#39;Registered&#39; and
+                        c.get(&#39;type&#39;) == &#39;Ready&#39; and
                         c.get(&#39;status&#39;) == &#39;True&#39;
                         for c in conditions
                     )
-                    cache_ready = any(
-                        c.get(&#39;type&#39;) == &#39;CacheReady&#39; and
-                        c.get(&#39;status&#39;) == &#39;True&#39;
-                        for c in conditions
-                    )
-                    agent_ready = any(
-                        c.get(&#39;type&#39;) == &#39;AgentReady&#39; and
-                        c.get(&#39;status&#39;) == &#39;True&#39;
-                        for c in conditions
-                    )
-
-                    if registered and cache_ready and agent_ready:
+                    if registered:
                         ippool_status.get(
                             &#39;status&#39;, {}
                         ).get(&#39;ipv4&#39;, {}).get(&#39;available&#39;, 0)
@@ -1080,7 +1046,7 @@ spec:
             # Delete DHCP IP pool using kubectl
             try:
                 result = subprocess.run(
-                    [&#39;kubectl&#39;, &#39;delete&#39;, &#39;ippools.network&#39;, ippool_name],
+                    [&#39;kubectl&#39;, &#39;delete&#39;, &#39;ippools.loadbalancer&#39;, ippool_name],
                     stdout=subprocess.PIPE,
                     stderr=subprocess.PIPE,
                     universal_newlines=True,
